--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -127,3 +127,37 @@ h3:hover{
     padding: 30px 0px 30px 0px;
 }
 
+/* Download */
+
+.download{
+    padding: 180px 30px 40px 30px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.browser{
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 350px;
+}
+
+.browser article{
+    border-radius: 10px;
+    box-shadow: #DFDDDD 0px 4px 12px;
+    margin: 20px;
+    padding: 70px 0px 15px 0px; 
+   
+}
+
+.browser h3{
+    padding-top: 30px;
+    font-weight: 500;
+}
+
+.browser p{
+    border-bottom: 3px dotted #b8b9bc;
+    padding-bottom: 50px;
+}
