--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -19,6 +19,7 @@ p{
 
 header {
     padding: 40px 30px 30px 30px;
+    /* display: none; */
 }
 
 nav{
@@ -28,7 +29,8 @@ nav{
 }
 
 main{
-    height: calc(100vh - 95px) ;
+    height: calc(100vh - 95px);
+    /* display: none; */
 }
 .container {
     padding: 30px 30px 0px 30px;
@@ -130,34 +132,42 @@ h3:hover{
 /* Download */
 
 .download{
-    padding: 180px 30px 40px 30px;
+    padding: 30px 30px 40px 30px;
     display: flex;
     flex-direction: column;
-    text-align: center;
+    text-align: center; 
 }
 
 .browser{
     display: flex;
     flex-direction: column;
-    margin: 0 auto;
     width: 100%;
     max-width: 350px;
+    padding-top: 40px;
+    margin: 0 auto;
 }
 
 .browser article{
     border-radius: 10px;
     box-shadow: #DFDDDD 0px 4px 12px;
     margin: 20px;
-    padding: 70px 0px 15px 0px; 
-   
+    padding: 45px 0px 15px 0px; 
+    width: 80%;
+    max-width: 260px;
+    margin: 20px auto;
 }
 
 .browser h3{
-    padding-top: 30px;
+    padding: 25px 0px 10px 0px;
     font-weight: 500;
 }
 
 .browser p{
-    border-bottom: 3px dotted #b8b9bc;
-    padding-bottom: 50px;
+    border-bottom: 3px dotted #DFDDDD;
+    padding-bottom: 35px;
+}
+
+.browser button{
+    margin: 20px 0px 10px 0px;
+    padding: 10px 20px 10px 20px ;
 }
