--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-h1, h2, h3, h4, h5, p, a, button{
+h1, h2, h3, h4, h5, p, a, ul, button{
     font-family: 'Rubik', sans-serif;
 }
 
@@ -18,19 +18,65 @@ p{
 }
 
 header {
-    padding: 40px 30px 30px 30px;
     /* display: none; */
-}
-
-nav{
+    padding: 40px 30px 30px 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
+ul {
+    display: none;
+}
+
+
+
+@media (min-width: 768px) {
+   
+    header{
+        width: 85%;
+        margin: 0 auto;
+        padding: 30px 0px;
+    }
+
+    ul{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        list-style: none;
+        font-size:15px;
+        gap: 50px
+    }
+
+    .login{
+        background-color: #FA5757;
+        color:#FFFFFF;
+        border-radius:10px;
+        padding: 7px 30px;
+        border: 2px solid transparent;
+    }
+
+    .login:hover{
+        cursor: pointer;
+        border: 2px solid #FA5757;
+        background-color: #FFFFFF;
+    }
+
+    li:hover{
+        cursor:pointer;
+        color: #FA5757;
+    }
+    
+    .hamburguer{
+        display: none;
+    }
+
+}
+
+
 main{
     height: calc(100vh - 95px);
-    /* display: none; */
+    display: none;
 }
 .container {
     padding: 30px 30px 0px 30px;
@@ -81,7 +127,7 @@ h1{
 }
 
 .feature{
-    /* display: none !important; */
+    display: none !important;
     display: flex;
     flex-direction: column;
     padding: 50px 30px 10px 30px;
@@ -140,7 +186,7 @@ h3{
 /* Download */
 
 .download{
-    /* display: none !important; */
+    display: none !important;
     padding: 100px 30px 40px 30px;
     display: flex;
     flex-direction: column;
@@ -183,6 +229,7 @@ h3{
 /* Questions */
 
 .question{
+    display: none !important;
     padding: 80px 30px 110px 30px;
     display: flex;
     flex-direction: column;
@@ -213,6 +260,7 @@ h3{
 /* Contact */
 
 .contact{
+    display: none !important;
     background-color: #5267DF;
     padding: 80px 30px 65px 30px;
     display: flex;
@@ -264,6 +312,7 @@ h3{
 /* Footer */
 
 footer{
+    display: none !important;
     background-color: #252A45;
     display: flex;
     flex-direction: column;
@@ -282,6 +331,7 @@ footer div{
 footer h3{
     color:#FAFDFF;
     font-size: 16px;
+    border: 0px solid transparent;
 }
 
 .media{
@@ -291,3 +341,5 @@ footer h3{
     gap:40px;
     align-items: center;
 }
+
+
