--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -28,9 +28,10 @@ ul {
 /* Main */
 main{
     display: flex;
+    
     flex-direction: column;
     align-items: center;
-    padding: 15px 0px 15px 0px;
+    padding: 5px 0px 0px 0px;
     height: calc(100vh - 99px);
     border: 1px solid #FA5757;
     text-align: center;
@@ -46,22 +47,26 @@ main div img{
 .data{
     display: flex;
     flex-direction: column;
-  
+    
 }
 
-
+.left{
+     align-items: center;
+}
 
 .data h1{
     font-size: 32px;
     font-weight: 500;
-    padding: 10px 0px 25px 0px;
+    padding: 0px 0px 20px 0px;
     max-width: 430px;
 }
 
 .data p{
-    padding: 4px;
+    padding: 0px 0px 10px 0px; 
     line-height: 1.5;
-    max-width: 430px; 
+    max-width: 450px;
+    
+    /* letter-spacing: 1px; */
 }
 
 .data div{
@@ -79,16 +84,86 @@ main div img{
     box-shadow: 0px 5px 5px 0px #EEEEFA; 
 }
 
-.purple{
+#purple{
     background-color:#5267DF;
     color: #FFFFFF;
+    border: 2px solid transparent;
 }
 
-.white{
+#white{
     color: #93939a;
     background-color: #F7F7F6;
+    border: 2px solid transparent;
 }
 
+/* Feature */
+
+.feature{
+    /* display: none !important; */
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    padding-top: 10px ;
+    /* align-items: center; */
+    text-align: center;
+    
+    margin: 0px auto;
+    max-width: 450px;
+    border: 1px solid #FA5757;
+}
+
+.data h2{
+    font-size: 27px;
+    font-weight: 500;
+    padding: 0px 0px 20px 0px;
+    max-width: 430px;
+}
+
+.container-button{
+    margin: 50px 0px 0px 0px;
+    display: flex;
+    flex-direction: column;
+    border-bottom: 1px solid #b8b9bc;
+    border-top: 1px solid #b8b9bc;
+    
+}
+
+.first-button h3{
+    border-bottom: 5px solid #FA5757;
+}
+
+.last-buttons {
+    border-bottom: 1px solid #b8b9bc;
+    border-top: 1px solid #b8b9bc;
+}
+
+.last-buttons h3:hover{
+    cursor: pointer;
+    color: #FA5757;
+
+}
+
+h3{
+    padding: 16px 0px;
+    margin: 0 auto;
+    font-weight: 400;
+    width: 180px;
+    border-bottom: 5px solid transparent;
+}
+
+.detail{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+.detail img{   
+    
+    object-fit: contain;   
+    width: 340px;
+    max-width: 370px;
+}
 
 @media (min-width: 900px) {
    
@@ -131,7 +206,7 @@ main div img{
     .hamburger{
         display: none;
     }
-
+    
 /* Main     */
     main{
         flex-direction: row-reverse;
@@ -158,6 +233,10 @@ main div img{
        padding-bottom: 15px;
     }
 
+    .left{
+        align-items: start;
+    }
+
     .data h1{
         font-size: 36px;
         letter-spacing: 2px;
@@ -174,4 +253,43 @@ main div img{
     .btn{
      margin-left: 0px;
     }
+
+    #white:hover{
+        border: 2px solid #5f5f68;
+        color: #5f5f68;
+    }
+    
+     #purple:hover{
+        border:2px solid #5267DF;
+        background-color: #FFFFFF;
+        color: #5267DF;
+    }
+
+/* Feature */
+
+.feature{
+    height: 100vh;
+    width: 85%;
+    max-width: 1200px;
+}
+
+.container-button{
+    max-width: 1100px;
+    flex-direction: row;
+    justify-content: space-between;
+    border-top: 1px solid transparent;
+}
+
+.last-buttons{
+    border-bottom: 1px solid transparent;
+    border-top: 1px solid transparent;
+}
+
+.detail{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
 }
