--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -103,28 +103,34 @@ main div img{
     height: 100vh;
     display: flex;
     flex-direction: column;
-    padding-top: 10px ;
-    /* align-items: center; */
+    padding-top: 5px ;
+    /* justify-items: center; */
     text-align: center;
     
     margin: 0px auto;
-    max-width: 450px;
+    max-width: 480px;
     border: 1px solid #FA5757;
+}
+
+.center{
+    align-items: center;
 }
 
 .data h2{
     font-size: 27px;
     font-weight: 500;
-    padding: 0px 0px 20px 0px;
+    padding: 0px 0px 15px 0px;
     max-width: 430px;
 }
 
 .container-button{
-    margin: 50px 0px 0px 0px;
+    margin: 30px auto 50px auto;
     display: flex;
     flex-direction: column;
     border-bottom: 1px solid #b8b9bc;
     border-top: 1px solid #b8b9bc;
+    width: 80%;
+    
     
 }
 
@@ -163,7 +169,10 @@ h3{
     object-fit: contain;   
     width: 340px;
     max-width: 370px;
+    padding-bottom: 30px;
 }
+
+
 
 @media (min-width: 900px) {
    
@@ -272,14 +281,26 @@ h3{
     height: 100vh;
     width: 85%;
     max-width: 1200px;
+    align-items: center;
+}
+
+.center p{
+    max-width: 600px;
+ 
 }
 
 .container-button{
-    max-width: 1100px;
+    max-width: 650px;
     flex-direction: row;
     justify-content: space-between;
     border-top: 1px solid transparent;
+    margin: 25px 0px 65px 0px;
+    width: 80%;
 }
+
+.container-button div{
+    padding: 0px 5px;
+} 
 
 .last-buttons{
     border-bottom: 1px solid transparent;
@@ -288,9 +309,30 @@ h3{
 
 .detail{
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
+    gap:60px;
+    text-align: start;
+    /* justify-content: space-between; */
+    /* align-items: center; */
+    padding-left: 90px;
+}
+.detail img{   
+    max-width: 480px;
+    width: 100%;
+    flex-grow: 1;  
+}
+
+.detail .data-left{
+    flex-grow: 1;
+   
+}
+
+.detail .data p {
+    max-width: 480px;
 }
 
 
 }
+
